--- a/package.json
+++ b/package.json
@@ -15,24 +15,37 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.4.0",
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.10.2",
+    "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^5.40.0",
     "@trpc/client": "^10.45.1",
     "@trpc/next": "^10.45.1",
     "@trpc/react-query": "^10.45.1",
     "@trpc/server": "^10.45.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/lodash": "^4.17.4",
     "@types/mysql": "^2.15.26",
+    "@types/react-loading-overlay": "^1.0.4",
+    "@types/uuid": "^9.0.8",
     "antd": "^5.16.0",
+    "bcryptjs": "^2.4.3",
+    "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "next": "^14.1.3",
-    "next-auth": "^4.24.6",
+    "next-auth": "^4.24.7",
+    "pnpm": "^9.1.1",
     "react": "18.2.0",
+    "react-devtools": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.2",
+    "react-loading-overlay": "^1.0.1",
+    "react-spinners": "^0.13.8",
     "reactstrap": "^9.2.2",
     "superjson": "^2.2.1",
     "sweetalert2": "^11.10.7",
+    "tailwind-merge": "^2.3.0",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -47,7 +60,7 @@
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.10.2",
+    "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.1",
     "typescript": "^5.4.2"
@@ -55,5 +68,5 @@
   "ct3aMetadata": {
     "initVersion": "7.29.0"
   },
-  "packageManager": "npm@10.1.0"
+  "packageManager": "pnpm@9.0.5"
 }
